--- a/style.css
+++ b/style.css
@@ -13,24 +13,29 @@ body{
 }
 section{
     text-align: center;
-    padding-top: 7em;
+    padding-top: 6em;
 }
 h1{
-    margin-bottom: 1.5em;
+    margin-bottom: 2em;
     font-size: 3em;
 }
 main{
+    position: relative;
     background-color: white;
     color: rgba(0, 0, 0, 0.6);
     width: 600px;
     margin: 0 auto;
-    padding: 1.5em;
+    padding: 1em;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
     justify-items: center;
     grid-gap: 10px;
     border-radius: 50px;
     box-shadow: 0px 10px 15px rgba(24, 90, 157,0.7);
+    grid-template-areas: 
+        ". x"
+        ". y"
+    ;
 }
 ul.actions{
     list-style: none;
@@ -38,19 +43,24 @@ ul.actions{
     flex-direction: row;
     font-size: 1.3em;
     cursor: pointer;
+    grid-area: y;
 }
 li:hover{
     color: rgba(0, 0, 0, 1);
 }
 img{
+    z-index: 1;
+    position: absolute;
+    top: -4.3em;
+    left: 1.5em;
     box-shadow: 0px 7px 10px grey;
-    height: 100px;
-    width: 100px;
+    height: 180px;
+    width: 180px;
     border-radius: 50%;
-    grid-row: 1/3;
 }
 audio{
-    width: 90%;
+    grid-area: x;
+    width: 100%;
 }
 .actions li:first-child{
     margin-right: 2.3em;
@@ -62,13 +72,10 @@ audio{
     display: none;
 }
 .rot{
-    animation: rotate 4s linear infinite;
+    animation: rotate 3s linear infinite;
 }
 .stop{
     animation-play-state: paused;
-}
-.no{
-    pointer-events: none;
 }
 @keyframes rotate{
     0%{
