--- a/style.css
+++ b/style.css
@@ -85,11 +85,23 @@ audio{
         transform: rotate(360deg);
     }
 }
-@media(max-width:650px){
+@media(max-width:600px){
     main{
-        grid-template-columns: 1fr;
-        grid-gap:30px;
+        grid-template-columns: 1fr 4fr;
+        grid-gap:10px;
         width: 90%;
+        grid-template-columns: 
+        "x ."
+        "y .";
+    }
+    img{
+        top: -2.5em;
+        left: 0.5em;
+        height: 150px;
+        width: 150px;
+    }
+    audio{
+        width: 100%;
     }
     h1{
         font-size: 2em;
@@ -101,8 +113,27 @@ audio{
         margin-left: 1.8em;
     }
 }
-@media(max-width:400px){
+@media(max-width:550px){
+    img{
+        height: 130px;
+        width: 130px;
+        left: 1em;
+        top: -1.5em;
+    }
+}
+@media(max-width:480px){
+    main{
+        grid-template-columns: 1fr 6fr;
+    }
+    img{
+        height: 100px;
+        width: 100px;
+        left: 0.8em;
+    }
     audio{
-        width: 100%;
+        height: 1.5em;
+    }
+    .actions>*{
+        font-size: 0.8em;
     }
 }
